# payloader

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  compile.sh  list.txt  log4cxx.properties  outputVideo.avi  prototype4_rec_rtsp  prototype4_send_rtsp  prueba.txt  pruebas.txt
OpenCV/Release/: CMakeCache.txt~  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_uninstall.cmake  cvconfig.h  install_manifest.txt
OpenCV/Release/apps/: CTestTestfile.cmake
OpenCV/Release/apps/annotation/: CTestTestfile.cmake
OpenCV/Release/apps/createsamples/: CTestTestfile.cmake
OpenCV/Release/apps/interactive-calibration/: CTestTestfile.cmake
OpenCV/Release/apps/traincascade/: CTestTestfile.cmake
OpenCV/Release/apps/version/: CTestTestfile.cmake
OpenCV/Release/apps/visualisation/: CTestTestfile.cmake
OpenCV/Release/data/: CTestTestfile.cmake
OpenCV/Release/doc/: CTestTestfile.cmake  Doxyfile
OpenCV/Release/include/: CTestTestfile.cmake
OpenCV/Release/lib/: libopencv_calib3d.so.3.2.0  libopencv_features2d.so.3.2.0  libopencv_flann.so.3.2.0  libopencv_highgui.so.3.2.0  libopencv_imgcodecs.so.3.2.0  libopencv_ml.so.3.2.0  libopencv_objdetect.so.3.2.0  libopencv_photo.so.3.2.0  libopencv_shape.so.3.2.0  libopencv_stitching.so.3.2.0  libopencv_superres.so.3.2.0  libopencv_video.so.3.2.0  libopencv_videoio.so.3.2.0  libopencv_videostab.so.3.2.0
OpenCV/Release/modules/: CTestTestfile.cmake
OpenCV/Release/modules/python3/: headers.txt  (+2 more)
OpenCV/Release/samples/: CTestTestfile.cmake
OpenCV/Release/unix-install/: opencv.pc
docker/: Dockerfile  README.md
openCV/: op.sh
pruebas/: outputVideo.avi
src/: prototype1.cpp  prototype2.cpp  prototype3.cpp  prototype4.cpp  prototype4_rec.cpp  prototype4_rec_rtsp.cpp  prototype4_send.cpp  prototype4_send_rtsp.cpp  prototype5_rec.cpp  prototype5_send.cpp  receiver.cpp  sender.cpp
src/libs/: Codecs.h  Decoder.cpp  Decoder.h  DecoderWeb.cpp  DecoderWeb.h  Encoder.cpp  Encoder.h  ExternalInput.cpp  ExternalInput.h  ExternalOutput.cpp  ExternalOutput.h  InputReader.cpp  InputReader.h  Interfaces.h  MediaDefinitions.h  MediaProcessor.cpp  MediaProcessor.h  OutputWriter.cpp  OutputWriter.h  Packager.cpp  Packager.h  RtspReader.cpp  RtspReader.h  RtspReader_fromDisk.cpp  RtspReader_fromDisk.h  RtspServerSession.cpp  RtspServerSession.h  Sender.cpp  Sender.h  SenderRtsp.cpp  SenderRtsp.h  SessionControler.cpp  Streamer.cpp  Streamer.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Unpackager.cpp  Unpackager.h  (+2 more)
src/libs/codecs/: VideoCodec.cpp
src/libs/deprecated/: rtspParser.c
src/libs/rtp/: RtpHeaders.h  RtpPacketQueue.cpp  RtpSink.cpp  RtpSink.h  RtpSource.cpp  RtpSource.h
(+109 files in other folders)
